--- a/dev/styles/base/_color.scss
+++ b/dev/styles/base/_color.scss
@@ -1,4 +1,7 @@
-$base-off-white: #FCFCFC;
-$form-background: rgba(255, 255, 255, .2);
-$white: #fff;
-$black: #000;
+$white: #ffffff;
+$black: #000000;
+$background: #f1f6f1;
+$dark-red: #70290d; 
+$dark-blue: #1b3852;
+$dark-grey: #4d4f4f;
+$trans-red: rgba(112, 41, 13, 0.5);
