--- a/dev/styles/pages/_homePage.scss
+++ b/dev/styles/pages/_homePage.scss
@@ -1,39 +1,21 @@
+.section{
+	height: 700px;
+	width: 100%;
+}
+
+.page-top{	
+	background-image: url('../../images/sunset.jpg');
+    background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+
 .logo{
 	width: 200px;
 	position: absolute;
     left: 0;
     top: 0;
     padding: 12px 24px !important;
-}
-
-.center{
-	color: $white;
-	background: rgba(255, 55, 55, 0.3);
-	width: 100%;
-	position: absolute;
-    top: 60%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    padding-top: 20px;
-	padding-bottom: 20px;
-}
-
-.title{
-	font-size: 42px;
-    position: relative;
- 	text-align: center;
-}
-
-.divider{
-	margin: auto;
-	width: 40%;
-	border: 1px solid grey;
-}
-
-.subtext{
-	text-align: center;
-	font-size: 18px;
-	font-weight: bold;
 }
 
 .subscribe{
@@ -44,11 +26,36 @@
     justify-content: center;
 }
 
+.text-input{
+	border-radius: 5px;
+	padding: 10px;
+	border: 1px solid darkred;
+	color: $black;
+}
+
 .button{
-	margin-left: 10px;
+	margin-left: -10px;
 	border-radius: 5px;
 	background: darkred;
 	color: white;
-	padding: 3px;
+	padding: 5px 15px;
 	cursor: pointer;
+	font-size: 2rem;
+}
+
+.divider__container{
+	background: $trans-red;
+	width: 100%;
+	height: 300px;
+	padding: 20px;
+	text-align: center;
+}
+
+.divider{
+	height: 58px;
+    width: 50px;
+	background-image: url('../../images/divider.png');
+    background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
 }
