--- a/dev/styles/pages/_homePage.scss
+++ b/dev/styles/pages/_homePage.scss
@@ -1,5 +1,23 @@
+.main{
+	height: 100%;
+	width: 100%;
+}
+
 .section{
 	height: 700px;
+	width: 100%;
+	text-align: center;
+}
+
+.section-top{
+	padding: 10px;
+	width: 100%;
+	justify-content: center;
+	margin-bottom: 50px;
+}
+
+.section-bottom{
+	background: $trans-red;
 	width: 100%;
 }
 
@@ -10,26 +28,28 @@
 	background-position: center;
 }
 
+.page-bottom{	
+	width: 100%;
+	height: 50px;
+}
+
 .logo{
-	width: 200px;
+	width: 240px;
 	position: absolute;
-    left: 0;
-    top: 0;
-    padding: 12px 24px !important;
+    left: 180px;
+    top: 60px;
 }
 
 .subscribe{
 	display: flex;
-	width: 100%;
-	position: absolute;
-    bottom: 10%;
+	height: 50px;
     justify-content: center;
 }
 
 .text-input{
 	border-radius: 5px;
 	padding: 10px;
-	border: 1px solid darkred;
+	border: 2px solid $dark-red;
 	color: $black;
 }
 
@@ -43,19 +63,88 @@
 	font-size: 2rem;
 }
 
-.divider__container{
-	background: $trans-red;
-	width: 100%;
-	height: 300px;
-	padding: 20px;
-	text-align: center;
-}
-
-.divider{
-	height: 58px;
-    width: 50px;
+.arrow{
+	height: 70px;
+    width: 100%;
 	background-image: url('../../images/divider.png');
-    background-size: cover;
+    background-size: contain;
 	background-repeat: no-repeat;
 	background-position: center;
+	margin-bottom: 50px;
+}
+
+.tent{
+	height: 70px;
+    width: 100%;
+	background-image: url('../../images/tent.png');
+    background-size: contain;
+	background-repeat: no-repeat;
+	background-position: center;	
+}
+
+.framed{
+	width: 25%;
+}
+
+.framedImage{
+	width: 100%;
+	border: 2.75px solid $dark-red;
+}
+
+.framedText{
+	padding-left: 30px;
+	background-image: url('../../images/frame.png');
+    background-size: contain;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+
+.icon{
+	margin-left: 15px;
+	height: 30px;
+	width: 30px;
+	cursor: pointer;
+}
+
+.icon__label{
+	color: $white;
+	line-height: 30px;
+}
+
+.icon__container{
+	padding: 15px;
+}
+
+.modal__mask{
+	width: 100%;
+	height: 100%;
+	background: $dark-grey;
+	opacity: 0.85;
+	position: fixed;
+	left: 0;
+	top: 0;	
+}
+
+.modal__container{
+	position: fixed;
+	left: 0;
+	top: 0;
+	height: 100%;
+	width: 100%;
+}
+
+.modal__body{
+	background: $white;
+	padding: 10px;
+	border-radius: 5px;
+	position: relative;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 400px;
+}
+
+.modal__frame{
+	width: 100%;
+	height: 100%;
 }
