--- a/dev/styles/pages/_homePage.scss
+++ b/dev/styles/pages/_homePage.scss
@@ -11,7 +11,7 @@
 
 .section-top{
 	padding: 10px;
-	max-width: 1200px;
+	max-width: 1100px;
 	margin: auto;
 	justify-content: center;
 	margin-bottom: 50px;
@@ -38,7 +38,16 @@
 	width: 240px;
 	position: absolute;
     left: 180px;
-    top: 60px;
+    top: 50px;
+}
+
+.subscribe__container{
+    display: flex;
+    flex-direction: column;
+	align-items: flex-end;
+	margin-bottom: 40px;
+	margin-right: 20%;
+    margin-left: 5%;
 }
 
 .subscribe{
@@ -163,7 +172,7 @@
 }
 
 .partner__container{
-	max-width: 1200px;
+	max-width: 1100px;
 	margin: auto;
 }
 
@@ -183,17 +192,20 @@
 
 .stripe{
 	width: 100%;
-    height: 120px;
+    height: 115px;
 	background: $trans-red;
     position: absolute;
 	left: 0;
-}
-
-.contact{
-	width: 830px;
+	margin-top: 100px;
 }
 
 .fortunate{
 	width: 800px;
 	margin-bottom: -70px;
+}
+
+.eligible{
+	width: 40%;
+	margin-top: 10px;
+	margin-bottom: 40px;
 }
