--- a/dev/styles/pages/_homePage.scss
+++ b/dev/styles/pages/_homePage.scss
@@ -97,6 +97,7 @@
 	margin-top: 10px;
 	margin-bottom: 50px;
 	cursor: pointer;
+	z-index: 10;
 }
 
 .tent{
@@ -107,6 +108,7 @@
 	background-repeat: no-repeat;
 	background-position: center;	
 	cursor: pointer;
+	z-index: 10;
 }
 
 .framed{
