--- a/dev/styles/base/_color.scss
+++ b/dev/styles/base/_color.scss
@@ -4,4 +4,5 @@ $background: #f1f6f1;
 $dark-red: #70290d; 
 $dark-blue: #1b3852;
 $dark-grey: #4d4f4f;
-$trans-red: rgba(236, 98, 120, 0.6);
+$trans-red: #c3a7a4;
+// $trans-red: rgba(236, 98, 120, 0.6);
