--- a/dev/styles/global/global.scss
+++ b/dev/styles/global/global.scss
@@ -32,3 +32,19 @@ $steps: 51;
 		margin-left: #{$i}px !important;
 	}
 }
+
+.desktop-only{
+	display: block;
+}
+
+@media (max-width: $mobile-break-point){
+	.desktop-only{
+		display: none;
+	}
+}
+
+@media (min-width: $desktop-break-point){
+	body{
+		zoom: 80%;
+	}
+}
