--- a/dev/styles/global/global.scss
+++ b/dev/styles/global/global.scss
@@ -3,7 +3,7 @@
 @import '../components/allComponents';
 @import '../pages/allPages';
 
-body{
+html, body{
 	font-size: 16px;
     background: $background;
     font-family: "Bebas Neue", Book, sans-serif !important;
