--- a/dev/styles/pages/_homePage.scss
+++ b/dev/styles/pages/_homePage.scss
@@ -295,7 +295,7 @@
 			    content: "";
 				height: 25%;
 				display: block;
-				margin-top: 170px;
+				margin-top: 95%;
 				border-right: 1px solid grey;
 			}
 		}
@@ -318,7 +318,7 @@
 			    content: "";
 				height: 55%;
 				display: block;
-				margin-top: 170px;
+				margin-top: 95%;
 				border-right: 1px solid grey;
 			}
 		}
