--- a/dev/styles/pages/_homePage.scss
+++ b/dev/styles/pages/_homePage.scss
@@ -124,27 +124,27 @@
 
 .framed{
 	&.first{
-		background-image: url('../../images/a1-van.png');
+		background-image: url('../../images/a1.png');
 		&:hover{
-			background-image: url('../../images/b1-van.png');
+			background-image: url('../../images/b1.png');
 		}
 	}
 	&.second{
-		background-image: url('../../images/a2-climber.png');
+		background-image: url('../../images/a2.png');
 		&:hover{
-			background-image: url('../../images/b2-climber.png');
+			background-image: url('../../images/b2.png');
 		}
 	}
 	&.third{
-		background-image: url('../../images/a3-gear.png');
+		background-image: url('../../images/a3.png');
 		&:hover{
-			background-image: url('../../images/b3-gear.png');
+			background-image: url('../../images/b3.png');
 		}
 	}
 	&.fourth{
-		background-image: url('../../images/a4-info.png');
+		background-image: url('../../images/a4.png');
 		&:hover{
-			background-image: url('../../images/b4-info.png');
+			background-image: url('../../images/b4.png');
 		}
 	}
 	
@@ -199,7 +199,7 @@
 
 .stripe{
 	width: 100%;
-    height: 115px;
+    height: 110px;
 	background: $trans-red;
     position: absolute;
 	left: 0;
@@ -213,9 +213,8 @@
 }
 
 .eligible{
-	width: 40%;
-	margin-top: 10px;
-	margin-bottom: 40px;
+	width: 50%;
+	margin-top: 20px;
 }
 
 .contact{
@@ -240,6 +239,10 @@
 
 	.page-top{	
 		background-position: right;
+	}
+
+	.page-bottom{
+		height: 30px;
 	}
 
 	.logo{
@@ -287,9 +290,9 @@
 		&.first{
 			float: left;
 			margin-bottom: -70px;
-			background-image: url('../../images/m1-van.png');
+			background-image: url('../../images/m1.png');
 			&:hover{
-				background-image: url('../../images/m1-van.png');
+				background-image: url('../../images/m1.png');
 			}
 			&:after {
 				position: relative;
@@ -297,24 +300,24 @@
 			    content: "";
 				height: 25%;
 				display: block;
-				margin-top: 95%;
+				margin-top: 100%;
 				border-right: 1px solid grey;
 			}
 		}
 		&.second{
 			float: right;
 			margin-bottom: -70px;
-			background-image: url('../../images/m2-climber.png');
+			background-image: url('../../images/m2.png');
 			&:hover{
-				background-image: url('../../images/m2-climber.png');
+				background-image: url('../../images/m2.png');
 			}
 		}
 		&.third{
 			float: left;
 			margin-bottom: 50px;
-			background-image: url('../../images/m3-gear.png');
+			background-image: url('../../images/m3.png');
 			&:hover{
-				background-image: url('../../images/m3-gear.png');
+				background-image: url('../../images/m3.png');
 			}
 			&:after {
 				position: relative;
@@ -322,22 +325,22 @@
 			    content: "";
 				height: 55%;
 				display: block;
-				margin-top: 95%;
+				margin-top: 100%;
 				border-right: 1px solid grey;
 			}
 		}
 		&.fourth{
 			float: right;
 			margin-bottom: 50px;
-			background-image: url('../../images/m4-info.png');
+			background-image: url('../../images/m4.png');
 			&:hover{
-				background-image: url('../../images/m4-info.png');
+				background-image: url('../../images/m4.png');
 			}
 		}
 
 		width: 49%;
-		padding: 5px;
 		height: 100vw;
+		background-position: 100% 0%;
 	}
 
 	.icon{
@@ -366,6 +369,7 @@
 	.eligible{
 		width: 100%;
 		padding: 30px;
+		padding-bottom: 0;
 		margin: 0;
 	}
 
