--- a/dev/styles/global/global.scss
+++ b/dev/styles/global/global.scss
@@ -39,6 +39,10 @@ $steps: 51;
 	display: block;
 }
 
+.w-20{
+	width: 20%;
+}
+
 @media (max-width: $mobile-break-point){
 	.desktop-only{
 		display: none;
