--- a/dev/styles/pages/_homePage.scss
+++ b/dev/styles/pages/_homePage.scss
@@ -82,7 +82,7 @@
 	border-radius: 10px;
 	background: $trans-red;
 	color: white;
-	padding: 0 25px;
+	padding: 0 24px;
 	cursor: pointer;
 	font-family: "Montserrat" !important;
 	font-weight: bolder;
@@ -123,37 +123,38 @@
 }
 
 .framed{
-	&.first{
+	*{	
+		height: 400px;
+		width: 220px;
+		cursor: pointer;
+		background-size: cover;
+		background-repeat: no-repeat;
+		background-position: center;	
+	}
+	.first{
 		background-image: url('../../images/a1.png');
 		&:hover{
 			background-image: url('../../images/b1.png');
 		}
 	}
-	&.second{
+	.second{
 		background-image: url('../../images/a2.png');
 		&:hover{
 			background-image: url('../../images/b2.png');
 		}
 	}
-	&.third{
+	.third{
 		background-image: url('../../images/a3.png');
 		&:hover{
 			background-image: url('../../images/b3.png');
 		}
 	}
-	&.fourth{
+	.fourth{
 		background-image: url('../../images/a4.png');
 		&:hover{
 			background-image: url('../../images/b4.png');
 		}
 	}
-	
-	height: 400px;
-	width: 220px;
-	cursor: pointer;
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center;	
 }
 
 .icon{
@@ -185,6 +186,7 @@
 	margin: auto;
 	display: flex;
 	justify-content: space-between;
+	margin-bottom: 40px;
 }
 
 .partner{
@@ -210,11 +212,12 @@
 
 .fortunate{
 	width: 800px;
+	margin-top: 40px;
 }
 
 .eligible{
 	width: 50%;
-	margin-top: 20px;
+	margin-top: 30px;
 }
 
 .contact{
@@ -287,65 +290,86 @@
 	}
 
 	.framed{
+		width: 50%;
+		height: 100vw;
+
+		*{			
+			width: 46vw;
+			height: 100%;
+		}
+
 		&.first{
 			float: left;
 			margin-bottom: -70px;
-			background-image: url('../../images/m1.png');
-			&:hover{
-				background-image: url('../../images/m1.png');
-			}
+			padding-right: 10px;
 			&:after {
 				position: relative;
-				left: 5px;
+				left: 13px;
 			    content: "";
-				height: 25%;
+				height: 28%;
 				display: block;
-				margin-top: 100%;
+				margin-top: -125%;
 				border-right: 1px solid grey;
 			}
 		}
 		&.second{
 			float: right;
 			margin-bottom: -70px;
-			background-image: url('../../images/m2.png');
-			&:hover{
-				background-image: url('../../images/m2.png');
-			}
+			padding-left: 10px;
 		}
 		&.third{
 			float: left;
 			margin-bottom: 50px;
-			background-image: url('../../images/m3.png');
-			&:hover{
-				background-image: url('../../images/m3.png');
-			}
+			padding-right: 10px;
 			&:after {
 				position: relative;
-				left: 5px;
+				left: 13px;
 			    content: "";
-				height: 55%;
+				height: 58%;
 				display: block;
-				margin-top: 100%;
+				margin-top: -125%;
 				border-right: 1px solid grey;
 			}
 		}
 		&.fourth{
 			float: right;
 			margin-bottom: 50px;
+			padding-left: 10px;
+		}
+
+		.first{
+			background-image: url('../../images/m1.png');
+			&:hover{
+				background-image: url('../../images/m1.png');
+			}
+		}
+		.second{
+			background-image: url('../../images/m2.png');
+			&:hover{
+				background-image: url('../../images/m2.png');
+			}
+		}
+		.third{
+			background-image: url('../../images/m3.png');
+			&:hover{
+				background-image: url('../../images/m3.png');
+			}
+		}
+		.fourth{
 			background-image: url('../../images/m4.png');
 			&:hover{
 				background-image: url('../../images/m4.png');
 			}
 		}
-
-		width: 48.5%;
-		height: 100vw;
-		background-position: 100% 0%;
 	}
 
 	.icon{
 		right: 50%;
 		transform: translateX(50%);
+	}
+
+	.icon__label{
+		margin-bottom: 50px;
 	}
 
 	.icon__container{
@@ -369,8 +393,6 @@
 	.eligible{
 		width: 100%;
 		padding: 30px;
-		padding-bottom: 0;
-		margin: 0;
 	}
 
 	.band{
