--- a/dev/styles/pages/_homePage.scss
+++ b/dev/styles/pages/_homePage.scss
@@ -79,7 +79,8 @@
 }
 
 .button{
-	margin-left: -6px;
+	margin-top: 1px;
+    margin-left: -10px;
 	border-radius: 10px;
 	background: $trans-red;
 	color: white;
@@ -87,7 +88,7 @@
 	cursor: pointer;
 	font-family: "Montserrat" !important;
 	font-weight: bolder;
-	height: 65px;
+	height: 65.5px;
 }
 
 .arrow{
